--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,10 @@
         "storage"
     ],
     "browser_action": {
-        "default_icon": "/ico/icon.png",
+        "default_icon": "/icon/icon.png",
         "default_popup": "popup.html"
     },
     "icons": {
-        "48": "/ico/icon.png"
+        "48": "/icon/icon.png"
     }
 }
